# infra_deerhide

./: .ansible-lint  .ansible-lint-ignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ansible-vars.yml  ansible.cfg  pyproject.toml
.github/workflows/: check.yml
ansible/: bunryl-playbook.yml  claudia-playbook.yml  giustina-playbook.yml  helene-playbook.yml  marlene-playbook.yml  melissa-playbook.yml  ping-playbook.yml  playbook.yml  rasp-playbook.yml  requirements.yml
ansible/group_vars/: rasp.yml
ansible/group_vars/all/: alloy.yml  coredns.yml  deerhide.yml  dex.yml  docker.yml  inventory.yml  kube.yml  lgtm.yml  minio.yml  monitoring.yml  netboot_xyz.yml  nginx.yml  packages.yml  portainer.yml  slack.yml  svn.yml  teamspeak.yml  traefik.yml
ansible/group_vars/clb/nas/: deerhide.yml  docker.yml  inventory.yml
ansible/group_vars/clb_nas/: deerhide.yml  docker.yml  inventory.yml
ansible/group_vars/nas/: deerhide.yml  docker.yml  inventory.yml
ansible/host_vars/: bunryl.yml  claudia.yml  giustina.yml  helene.yml  marlene.yml  melissa.yml
ansible/inventories/: inventory.ini
ansible/roles/cli_minio/tasks/: main.yml
docs/: ADAPT_AND_REMIX.md  ANSIBLE_PULL.md  ANSIBLE_VAULT.md  CORE_DNS_AND_ETCD.md  MUST_KNOW_QUICK_START.md  RUN_ON_A_MACHINE.md
scripts/: README.md  ansible_facts.sh  apply_ansible_on_hosts.sh  create_and_install_sshkey.sh  create_deploy_key.sh  gen_etcd_pki.sh  install_ansible.sh  install_kube_tools.sh  ping_ansible_hosts.sh  setup_operator_sshkey_all_servers.sh  setup_operator_sshkey_by_hosts.sh
(+96 files in other folders)
