[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "infra-deerhide"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^12.2.0"
ansible-dev-tools = "^25.10.0"
pre-commit = "^4.3.0"
jmespath = "^1.0.1"

[tool.poetry.group.test.dependencies]
